service-manifest.yml
apiVersion: v1
kind: Service
metadata:
  name: service-iwibot-frontend
spec:
  selector:
    app: iwibot-frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
